# YAC

./: MANIFEST.IN  README.md  combo1.csv  main.py  pyproject.toml  requirments.txt  setup.py
.github/workflows/: python-app.yml
config/: websites_config.ini
results/: combo1-result.csv
utils/: logger.py
yac/: main.py
yac/utils/: vparser.py
